kubernetes-manifest/apideploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: emart-app
  labels:
    app: api-deploy-label
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-pod
  template:
    metadata:
      labels:
        app: api-pod
    spec:
      containers:
      - name: api-container
        image: tayofere/nodeapi:16
        ports:
        - containerPort: 5000
          name: api-port
---
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: emart-app
spec:
  selector:
    app: api-pod
  ports:
  - protocol: TCP
    port: 5000
    targetPort: api-port
