kubernetes-manifest/emartdbdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emartdb
  namespace: emart-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emartdb
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: emartdb
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: emartdb-container
        image: mysql:5.7
        ports:
        - containerPort: 3306
          name: emartdb-port
        volumeMounts:
        - name: mysql-data
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-data
        emptyDir: {}

        #volumeMounts:
        #- name: emartdb-storage
        #  mountPath: /var/lib/mysql
  #volumeClaimTemplates:
  #- metadata:
  #    name: emartdb-storage
  #  spec:
  #    accessModes: [ "ReadWriteOnce" ]
      #storageClassName: "my-storage-class"
  #    resources:
  #      requests:
  #        storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: emartdb
  namespace: emart-app
spec:
  selector:
    app: emartdb
  ports:
  - protocol: TCP
    port: 3306
    targetPort: emartdb-port
